@@ -9,6 +9,8 @@ namespace NHibernate.Test.NHSpecificTest.NH1464
 	[TestFixture]
 	public class Fixture
 	{
+		private readonly IProxyValidator pv = new DynProxyTypeValidator();
+
 		public class CPPMimicBase
 		{
 			public virtual void Dispose()
@@ -61,11 +63,11 @@ namespace NHibernate.Test.NHSpecificTest.NH1464
 		[Test]
 		public void NoExceptionForDispose()
 		{
-			ICollection<string> errs = ProxyTypeValidator.ValidateType(typeof (CPPMimic));
+			ICollection<string> errs = pv.ValidateType(typeof (CPPMimic));
 			Assert.That(errs, Is.Null);
-			errs = ProxyTypeValidator.ValidateType(typeof(Another));
+			errs = pv.ValidateType(typeof(Another));
 			Assert.That(errs, Is.Null);
-			errs = ProxyTypeValidator.ValidateType(typeof(OneMore));
+			errs = pv.ValidateType(typeof(OneMore));
 			Assert.That(errs.Count, Is.EqualTo(1));
 		}
 	}
