@@ -3,13 +3,18 @@ using NHibernate.Proxy.Poco.Castle;
 
 namespace NHibernate.Bytecode.Castle
 {
-	public class DefaultProxyFactoryFactory : IProxyFactoryFactory
+	public class ProxyFactoryFactory : IProxyFactoryFactory
 	{
 		#region IProxyFactoryFactory Members
 
 		public IProxyFactory BuildProxyFactory()
 		{
 			return new CastleProxyFactory();
+		}
+
+		public IProxyValidator ProxyValidator
+		{
+			get { return new DynProxyTypeValidator(); }
 		}
 
 		#endregion
