@@ -6,7 +6,7 @@ namespace NHibernate.Bytecode
 	/// An interface for factories of <see cref="IProxyFactory">proxy factory</see> instances.
 	/// </summary>
 	/// <remarks>
-	/// Currently used to abstract from the tupizer even if... 
+	/// Used to abstract from the tupizer.
 	/// </remarks>
 	public interface IProxyFactoryFactory
 	{
@@ -16,6 +16,7 @@ namespace NHibernate.Bytecode
 		/// </summary>
 		/// <returns> The lazy-load proxy factory. </returns>
 		IProxyFactory BuildProxyFactory();
+
 		/*
 		/// <summary> Build a proxy factory for basic proxy concerns.  The return
 		/// should be capable of properly handling newInstance() calls.
@@ -27,14 +28,13 @@ namespace NHibernate.Bytecode
 		/// Must pass in either superClass or interfaces (or both).
 		/// 
 		/// </summary>
-		/// <param name="superClass">The abstract super class (or null if none).
-		/// </param>
-		/// <param name="interfaces">Interfaces to be proxied (or null if none).
-		/// </param>
-		/// <returns> The proxy class
-		/// </returns>
+		/// <param name="superClass">The abstract super class (or null if none).</param>
+		/// <param name="interfaces">Interfaces to be proxied (or null if none).</param>
+		/// <returns> The proxy class</returns>
 		// TODO: H3.2
-		//BasicProxyFactory buildBasicProxyFactory(System.Type superClass, System.Type[] interfaces);
-		 */ 
+		//BasicProxyFactory BuildBasicProxyFactory(System.Type superClass, System.Type[] interfaces);
+		 */
+
+		IProxyValidator ProxyValidator { get; }
 	}
 }
