@@ -3,10 +3,11 @@ Build 2.1.0.GA
 ** BREAKING CHANGES from NH2.0.xGA to NH2.1.0
 	##### Possible Breaking Changes for external frameworks #####
 		* ISession interface have additional methods
-		* DefaultProxyFactoryFactory moved to NHibernate.Bytecode.Castle
+		* DefaultProxyFactoryFactory moved to NHibernate.Bytecode.Castle.ProxyFactoryFactory
+		* IProxyFactoryFactory now provide the IProxyValidator implementation
 
 	##### Initialization time #####
-		* The ProxyTypeValidator check for "internal virtual" (to be proxied need "protected internal virtual")
+		* The ProxyValidator check for "internal virtual" (to be intercepted by proxy need "protected internal virtual")
 		
 
 Build 2.0.1.GA
